--- a/css/style.css
+++ b/css/style.css
@@ -16,8 +16,8 @@ html.mobile-menu-expanded {
 }
 
 *{
-  margin: 0;
-	padding: 0;
+  margin:0;
+	padding:0;
 	-webkit-box-sizing: border-box;
 	-moz-box-sizing: border-box;
 	box-sizing: border-box;
@@ -25,6 +25,8 @@ html.mobile-menu-expanded {
   text-decoration: none;
 }
 body {
+  margin:0;
+	padding:0;
   font-family: "Open Sans", Arial, sans-serif;
   font-size: 16px;
   line-height: 26px;
@@ -120,6 +122,7 @@ h2 {
 .col-lg-6{
   float: left;
   width: 50%;
+  height: auto;
 }
 .col-lg-7{
   float: left;
@@ -202,6 +205,137 @@ a {
 a:hover, a:focus, a:active {
   outline: none;
   text-decoration: none;
+}
+/*
+/////////////////////////////////////////////////////
+Styles contacto
+///////////////////////////////////////////////////// 
+*/
+.container.contacto{
+  background-color: #435494;
+  color: #fff;
+}
+form textarea, form input{
+  background-color: #435494;
+  padding-left: 5px; 
+  border: 2px solid #fff;
+  width: 83%;
+  margin:auto;
+  margin-left: 15px;
+}
+.col-lg-6 iframe{
+  height: 600px;
+  width: 100%;
+}
+.col-lg-6.mapa{
+  padding:50px;
+}
+form textarea{
+  height: 100px;
+}
+.form_email, .form_textArea{
+  padding-bottom:15px;
+}
+.form{
+  display: inline;
+  margin: right;
+  padding: 10px 10px 15px 15px;
+}
+.form input{
+  padding-left: 5px; 
+  width: 40%;
+  height: 2em;
+  margin-left: 15px;
+  border: 2px solid #fff;
+  background-color: #435494;
+}
+.form_span{
+  width: 80%;
+  margin:left;
+  text-align: justify;
+}
+.col-lg-6.contacto h1{
+  padding-top: 40px;
+  color:#fff;
+  font-size: 35px;
+  font-family: 'Raleway', sans-serif;
+}
+.form_span h2{
+  padding-top: 40px;
+  color:#fff;
+  font-size: 18px;
+  font-family: 'Raleway', sans-serif;
+}
+.form_span span{
+  text-align: justify;
+  text-align: center;
+  color:#fff;
+  font-size: 15px;
+  font-weight: 30%;
+  font-family: 'Raleway', sans-serif;
+}
+form input::placeholder , textarea::placeholder {
+  color: #fff;
+}
+.col-lg-6.contacto a{
+  color:#fff;
+  line-height: 20px;
+  font-size: 18px;
+}
+.button_form button{
+  background-color: #dedede; /* Green */
+  border: none;
+  color: black;
+  padding: 5px 10px;
+  text-align: center;
+  text-decoration: none;
+  display: inline-block;
+  font-size: 16px;
+  width: 83%;
+  margin:auto;
+  margin-left: 15px;
+}
+.error{
+  width: 100%;
+  height: 100%;
+}
+.button_form p{
+  color: red;
+  font-size: 15px;
+  font-family: inherit;
+  text-align: center;
+  padding: 10px;
+}
+.fila.contacto h2, .fila.contacto a{
+  margin-top: 20%;
+  text-align: center;
+  font-size:20px;
+  font-family: 'Raleway', sans-serif;
+}
+.fila.contacto{
+  text-align: center;
+}
+.fila.contacto a{
+  color:#000;
+}
+.fila.contacto h3{
+  text-align: center;
+  font-weight: bold;
+  font-size:20px;
+  font-family: 'Raleway', sans-serif;
+}
+footer{
+  text-align: center;
+  color:#fff;
+  font-size:15px;
+  font-family: 'Raleway', sans-serif;
+  background-color: #435494; 
+  padding: 5px;
+  margin-top:100px;
+  width: 100%;
+}
+#name:focus, #email:focus{
+  border: 2px solid red;
 }
 /*
 ///////////////////////////////////////////////////
