--- a/css/style.css
+++ b/css/style.css
@@ -584,7 +584,22 @@ body.mobile-nav-active #mobile-nav-toggle {
 
 /* Services Section
 --------------------------------*/
-
+.pdf-btn{
+  background-color: #fd5900;
+  border: 0;
+  border-radius: 3px;
+  padding: 10px 30px;
+  color: #fff;
+  transition: 0.4s;
+  cursor: pointer;
+}
+.pdf-btn:hover{
+  border: none;
+  background-color: #f7935e;
+}
+.pdf{
+  text-align: center;
+}
 #services {
   padding: 30px 0 0 0;
 }
