--- a/css/style.css
+++ b/css/style.css
@@ -832,13 +832,13 @@ body.mobile-nav-active #mobile-nav-toggle {
 }
 
 .call-to-action .cta-title {
-  color: #fff;
+  color: white !important;
   font-size: 28px;
   font-weight: 700;
 }
 
 .call-to-action .cta-text {
-  color: #fff;
+  color: white !important;
 }
 
 .call-to-action .cta-btn {
@@ -883,7 +883,7 @@ body.mobile-nav-active #mobile-nav-toggle {
 
 #team .member .details {
   background: #3899EC;
-  color: #fff;
+  color: rgb(3, 3, 3);
   padding: 15px;
   border-radius: 0 0 3px 3px;
 }
@@ -905,7 +905,7 @@ body.mobile-nav-active #mobile-nav-toggle {
 }
 
 #team .member .social a {
-  color: #fff;
+  color: rgb(0, 0, 0);
 }
 
 #team .member .social i {
@@ -935,7 +935,7 @@ body.mobile-nav-active #mobile-nav-toggle {
 #contact .contact-info address,
 #contact .contact-info p {
   margin-bottom: 0;
-  color: #000;
+  color: rgba(0, 0, 0, 0.603);
 }
 
 #contact .contact-info h3 {
@@ -943,11 +943,11 @@ body.mobile-nav-active #mobile-nav-toggle {
   margin-bottom: 15px;
   font-weight: bold;
   text-transform: uppercase;
-  color: #999;
+  color: rgb(92, 92, 92);
 }
 
 #contact .contact-info a {
-  color: #000;
+  color: rgba(0, 0, 0, 0.603);
 }
 
 #contact .contact-info a:hover {
@@ -1006,7 +1006,9 @@ body.mobile-nav-active #mobile-nav-toggle {
   box-shadow: none;
   font-size: 15px;
 }
-
+.section-header p{
+  color: rgba(0, 0, 0, 0.603);
+}
 
 /*--------------------------------------------------------------
 # Footer
