--- a/css/estilos.css
+++ b/css/estilos.css
@@ -54,8 +54,9 @@
   
   
   .carousel img:hover {
-    width: 200%;
+    width: 150%;
     opacity: 1.0;
+    margin-left:-80px;
   }
   
   .carousel .owl-nav,
