Traduccion de menu

--- a/css/estilos.css
+++ b/css/estilos.css
@@ -58,6 +58,10 @@
     opacity: 1.0;
     margin-left:-80px;
   }
+  #salt{
+    margin-left:40px;
+   margin-top:-40px
+  }
   
   .carousel .owl-nav,
   .carousel .owl-dots {
